Implement getting followers and followings
